# gordo-controller

./: .gitignore  Cargo.toml  Dockerfile-controller  Makefile  README.md  docker_push.sh  example-gordo.yaml  example-model.yaml  gordo-crd.yaml
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yaml  docker.yaml
ci/: integration_tests.sh  wait_gordo_controller.sh
examples/: apply_gordo.rs  helpers.rs  query_server.rs
k8s/: gordo-crd.yaml  kustomization.yaml  model-crd.yaml
k8s/base/: gordo-controller-config-map.yaml  gordo-controller-deployment.yaml  gordo-crd.yaml  kustomization.yaml  model-crd.yaml
k8s/minikube/: argo-namespace-install.yaml  default-service-account-patch.yaml  kustomization.yaml  storageclass-default.yaml  storageclass-managed-premium.yaml
k8s/production/: gordo-cluster-role-binding.yaml  gordo-config-map.yaml  gordo-controller-istio.yaml  gordo-controller-svc.yaml  gordo-pvc.yaml  gordo-service-account.yaml  gordo-workflow-role-binding.yaml  gordo-workflows-role.yaml  istio.virtualservice.yaml  kustomization.yaml  priority-server.yaml
scripts/: integration_tests.sh  wait_gordo_controller.sh
src/: deploy_job.rs  errors.rs  lib.rs  main.rs  metrics.rs  utils.rs  views.rs
src/crd/: argo.rs  gordo.rs  mod.rs  model.rs  pod.rs
src/crd/argo/: argo.rs  mod.rs
src/crd/gordo/: gordo.rs  mod.rs
src/crd/metrics/: mod.rs
src/crd/model/: mod.rs  model.rs
src/crd/pod/: mod.rs
src/tests/: helpers.rs  mod.rs  test_controller.rs
tests/: helpers.rs  test_controller.rs  test_server.rs
